--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/src/css/styles.css">
+        <link rel="stylesheet" href="src/css/styles.css">
         <title>hDC Host</title>
     </head>
     <body>
         <header class="nav">
             <nav class="navbar">
                 <a href="#">
-                    <img src="src/img/connection.gif" alt="hDC Host" class="logo">
+                    <img src="/src/img/connection.gif" alt="hDC Host" class="logo">
                 </a>
                 <ul class="nav-items">
                     <li>
