--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header class="nav">
             <nav class="navbar">
                 <a href="#">
-                    <img src="/src/img/connection.gif" alt="hDC Host" class="logo">
+                    <img src="src/img/connection.gif" alt="hDC Host" class="logo">
                 </a>
                 <ul class="nav-items">
                     <li>
